# ngtcp2

./: meson.build
crypto/: meson.build
crypto/includes/: meson.build
crypto/includes/ngtcp2/: meson.build  ngtcp2_crypto.h
crypto/quictls/: meson.build
lib/: meson.build  ngtcp2_ringbuf.c
lib/includes/ngtcp2/: meson.build
